@@ -1,3 +1,7 @@
+2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Debugging.Server.Mdb.mdp: Updated.
+
 2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* DebuggerServer.cs, BacktraceWrapper.cs: Track api changes. Properly
